[Animation Worklet] Main thread only peeks when necessary

Currently on main thread we peek the composited properties every frame.
Rather, we should peek if:
  - the last peek request has not been fulfilled. i.e. worklet has not
  produced local times or
  - input time has changed.

This change ensures we only peek when needed which is particularly
beneficial for scroll-linked animations where the input may not change
for many frames.

Bug: 914957
Change-Id: I668bdb24b87a3bf669bc0a236427673795578b77
Reviewed-on: https://chromium-review.googlesource.com/c/1406142
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622885}
Former-commit-id: e21c19877108d278decc483c238d5c63f6e45c5f